--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_new_release">New release</string>
+    <string name="menu_bank_details">Bank Details</string>
     <string name="title_activity_maps">Map</string>
     <string name="app_version">Version 1.1.0 beta</string>
     <string name="title_activity_scrolling_album_tracks">ScrollingActivity</string>
